--- a/public/index.html
+++ b/public/index.html
@@ -25,13 +25,13 @@
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, initial-scale=1, maximum-scale=1">
-	<meta name="gravura laser si mecanica" content="trofee, premii, produse promotionale">
+	<meta name="macarons" content="by July">
 	
     
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 	
-	<title>GravoSign</title>
+	<title>Macarons</title>
 </head>
 
 <body>
